// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switcher /> should render 1`] = `
<div>
  <div
    class="mfui-switcher"
  >
    <div
      class="mfui-switcher__input mfui-switcher__input_no-touch"
      tabindex="0"
    >
      <div
        class="mfui-switcher__pointer"
      />
    </div>
  </div>
</div>
`;

exports[`<Switcher /> should render left side text with medium size 1`] = `
<div
  class="mfui-switcher__content mfui-switcher__content_size_medium mfui-switcher__content_left"
>
  Text
</div>
`;

exports[`<Switcher /> should render right side text with medium size 1`] = `
<div
  class="mfui-switcher__content mfui-switcher__content_size_medium"
>
  Text
</div>
`;

exports[`<Switcher /> should render with showLoader=true 1`] = `
<div
  class="mfui-switcher__loader"
  data-testid="loader"
/>
`;
